@@ -1,5 +1,10 @@
 2004-09-27  Michael Koch  <konqueror@gmx.de>
 
+	* javax/swing/JTable.java
+	(setModel): Reimplemented.
+
+2004-09-27  Michael Koch  <konqueror@gmx.de>
+
 	* javax/swing/JTextArea.java
 	(append): Re-implemented.
 	(insert): Likewise.
